// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`advert 1`] = `
<Broadcast
  channel="adConfig"
>
  <Ad
    baseUrl="https://www.thetimes.co.uk/"
    contextUrl="https://www.thetimes.co.uk"
    isLoading={false}
    section="news"
    slotName="header"
  />
</Broadcast>
`;

exports[`advert with width 1`] = `
<Broadcast
  channel="adConfig"
>
  <Ad
    baseUrl="https://www.thetimes.co.uk/"
    contextUrl="https://www.thetimes.co.uk"
    isLoading={false}
    section="news"
    slotName="header"
    width={300}
  />
</Broadcast>
`;
